Details
- 
    Bug 
- 
    Resolution: Fixed
- 
    Major 
- 
    None
- 
    None
Description
The result of the "test_right_click" part of the comctl32:treeview winetest highly depends on the mouse pointer position.
Steps to reproduce under Windows:
- Open a Command Prompt and type "comctl32_winetest treeview" without hitting RETURN.
- Move the mouse pointer, so that it will be inside the TreeView test window that is spawned by the test. You probably need to run the test multiple times to estimate that position.
- Hit RETURN to run the test.
Result: "Test failed: parent right click sequence: ...", which doesn't happen if the mouse pointer is outside the TreeView test window.
This bug is even more severe during ReactOS Regression Testing, when the mouse pointer is at the top-left of the TreeView test window's title bar. The right-click test will then open the system menu of the TreeView test window and the entire testing process comes to a standstill.
This is illustrated by comctl32_treeview_rightclick_sysreg.png (when running the bootcdregtest on Test_VBox) and comctl32_treeview_rightclick_rosautotest.png
 (when running the bootcdregtest on Test_VBox) and comctl32_treeview_rightclick_rosautotest.png (when running rosautotest manually and moving the mouse pointer to the faulty position).
 (when running rosautotest manually and moving the mouse pointer to the faulty position).

