[COMCTL32_WINETEST] treeview: Un-skip test_right_click()

Test is now fixed.

This reverts commit cbcfbc4322f20f19d47ff5cbc3bf11d302fdb3e1.
CORE-14975